--- a/redis-cluster-manager/pom.xml
+++ b/redis-cluster-manager/pom.xml
@@ -29,7 +29,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>redis-cluster-util</finalName>
+		<finalName>redis-cluster-manager</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
