注释掉测试代码，修改打包错误bug

--- a/redis-cluster-manager/pom.xml
+++ b/redis-cluster-manager/pom.xml
@@ -39,7 +39,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>com.huit.util.RedisClusterUtil</mainClass>
+							<mainClass>com.huit.util.RedisClusterManager</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
